Fix gradient overlay on Safari

--- a/src/styles/area.css
+++ b/src/styles/area.css
@@ -10,7 +10,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      background: linear-gradient(rgba(255, 255, 255, 0.0), black);
+      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,#000000 100%);
     }
   }
 
